# admiral-ducky

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  test_payloads.json
.github/workflows/: MainDistributionPipeline.yml
benches/: extraction.rs
src/: embed.rs  functions.rs  http.rs  lang.rs  lib.rs  rhai.rs  s3.rs  state.rs
src/extraction/: chunking.rs  filters.rs  hierarchy.rs  mod.rs  parser.rs  types.rs
test/: Cargo.toml  Makefile  README.md
test/sql/: admiral_ducky.test
